k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cratos
  labels:
    app.kubernetes.io/name: cratos
    app.kubernetes.io/part-of: cratos
